--- a/precamp/cyworld/style/style.css
+++ b/precamp/cyworld/style/style.css
@@ -7,14 +7,14 @@
 .background {
   width: 960px;
   height: 960px;
-  background-image: url("./image/background.png");
+  background-image: url("../image/background.png");
   padding: 20px 0 0 20px;
 }
 
 .innerBox {
   width: 808px;
   height: 544px;
-  background-image: url("./image/innerBox.png");
+  background-image: url("../image/innerBox.png");
   padding: 32px 0 0 32px;
 }
 
@@ -110,4 +110,96 @@
 .wrapper__right {
   width: 524px;
   height: 472px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 8px;
+}
+
+.wrapper__right__header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  margin: 2px 0;
+}
+
+.right__header__left,
+.right__header__right {
+  color: #55b2d4;
+}
+
+.right__header__left {
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.right__header__right {
+  font-size: 13px;
+}
+
+.wrapper__right__body {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: white;
+  border: 1px solid gray;
+  border-radius: 14px;
+  padding: 20px 30px 0px 30px;
+}
+
+.content__header {
+  width: 100%;
+  /* background-color: blue; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.content__title {
+  display: flex;
+  justify-content: row;
+  align-items: flex-end;
+}
+
+.title {
+  color: #55b2d4;
+  font-weight: 700;
+  font-size: 22px;
+}
+
+.subtitle {
+  margin-left: 8px;
+  font-size: 8px;
+}
+
+.divide {
+  border-top: 1px solid gray;
+  margin: 6px 0;
+}
+
+.right__body__content__body {
+  font-size: 12px;
+  font-weight: 100;
+  color: gray;
+}
+
+.content__body {
+  width: 100%;
+  height: 270px;
+  margin-bottom: 10px;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.content__body .content__title {
+  margin-bottom: 8px;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
 }
