싸이월드 완성

--- a/precamp/cyworld/style/style.css
+++ b/precamp/cyworld/style/style.css
@@ -203,3 +203,31 @@ iframe {
   width: 100%;
   height: 100%;
 }
+
+.navigation {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  /* border: 1px solid black; */
+
+  position: absolute;
+  top: 120px;
+  left: 753px;
+}
+
+.navigation__item {
+  width: 60px;
+  height: 30px;
+  font-size: 12px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: white;
+  cursor: pointer;
+  background-color: #298eb5;
+  border: 1px solid #0f465e;
+  border-radius: 0px 5px 5px 0px;
+}
